--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -28,6 +28,19 @@ main {
     text-align: left;
 }
 
+h1 {
+    text-align: center;
+    margin: 10px;
+    padding: 5px;
+}
+
+.img-me-caleb {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+
 .grid-container {
     display: grid;
     grid-template: auto 1fr auto / auto 1fr auto;
@@ -61,8 +74,11 @@ main {
 }
 
 header {
+    display: flex;
+    justify-content: left;
+    align-items: center;
     background-color: var(--gray-color);
-    height: auto;
+    height: 50px;
     grid-column: 1 / 4;
 }
 
@@ -77,6 +93,7 @@ nav {
     background-color: var(--black-color);
     text-align: center;
     justify-content: space-around;
+    align-items: center;
     height: 50px;
     margin: 0;
 }
@@ -109,11 +126,13 @@ aside p {
 }
 
 footer {
-
+    display: flex;
     background-color: var(--gray-color);
     width: 100%;
-    height: 100px;
+    height: 50px;
+    justify-content: center;
     text-align: center;
+    align-items: center;
 }
 
 footer p {
