--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -17,6 +17,7 @@
 
     margin: 0;
     padding: 0;
+
 }
 
 main {
@@ -50,27 +51,32 @@ h1 {
 .box-1-header {
     padding: 1rem;
     grid-column: 1 / 4;
+    flex: 1 1 150px;
 
 }
 
 .box-2-nav {
     padding: 1rem;
     grid-column: 1 / 4;
+    flex: 1 1 150px;
 }
 
 .box-3-main {
     padding: 1rem;
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
+    flex: 1 1 250px;
 }
 
 .box-4-aside {
     padding: 1rem;
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
+    flex: 1 1 150px;
 }
 
 .box-5-footer {
     padding: 1rem;
     grid-column: 1 / 4;
+    flex: 1 1 150px;
 }
 
 header {
