--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -10,6 +10,7 @@
     --heading-font: Roboto, serif;
     --paragraph-font: Verdana;
     --purple-color: rebeccapurple;
+    --gray-opacity: rgba(128, 128, 128, 0.5);
 
 }
 
@@ -17,6 +18,7 @@
 
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 
 }
 
@@ -25,8 +27,9 @@ main {
 
     font-family: Roboto, Arial, sans-serif;
     background-color: var(--light-gray-color);
-    height: 500px;
+    height: 600px;
     text-align: left;
+
 }
 
 h1 {
@@ -35,99 +38,145 @@ h1 {
     padding: 5px;
 }
 
-.img-me-caleb {
+.card1 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 25%;
 }
 
+.card2 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
 .grid-container {
     display: grid;
     grid-template: auto 1fr auto / auto 1fr auto;
+    min-height: 100vh;
+    min-width: 100vw;
+
     /*classic holy grail layout*/
 }
 
 .box-1-header {
     padding: 1rem;
-    grid-column: 1 / 4;
-    flex: 1 1 150px;
+    grid-row: 1;
+    grid-column: 1 / 5;
 
 }
 
 .box-2-nav {
     padding: 1rem;
-    grid-column: 1 / 4;
-    flex: 1 1 150px;
+    grid-row: 2;
+    grid-column: 1 / 5;
+}
+
+.box-2-navlinks {
+    padding: 2rem;
+    grid-row: 2;
+    grid-column: 1 / 5;
 }
 
 .box-3-main {
     padding: 1rem;
-    grid-column: 2 / 3;
-    flex: 1 1 250px;
+    grid-row: 3;
+    grid-column: 1 / 3;
 }
 
 .box-4-aside {
     padding: 1rem;
-    grid-column: 3 / 4;
-    flex: 1 1 150px;
+    grid-row: 3;
+    grid-column: 4 / 5;
 }
 
 .box-5-footer {
     padding: 1rem;
-    grid-column: 1 / 4;
-    flex: 1 1 150px;
+    grid-row: 4;
+    grid-column: 1 / 5;
+
+}
+
+div {
+    background-color: var(--gray-color);
+}
+
+div p {
+    font-family: var(--heading-font);
+    color: var(--white-color);
 }
 
 header {
     display: flex;
     justify-content: left;
+    justify-content: space-around;
     align-items: center;
     background-color: var(--gray-color);
     height: 50px;
-    grid-column: 1 / 4;
+    width: 100vw;
+
+
 }
 
 header p {
     font-family: var(--heading-font);
-    color: var(--white-color);
+    color: var(--black-color);
     text-align: left;
 }
 
 nav {
     display: flex;
-    background-color: var(--black-color);
+    background-color: var(--gray-opacity);
     text-align: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    height: 50px;
+    width: 100vw;
+    height: auto;
     margin: 0;
+    border-radius: 0.5em;
 }
 
 nav a {
+
     color: var(--nav-link-color);
     font-family: var(--paragraph-font);
     text-decoration: none;
+
 
 }
 
 
 
 nav a:hover {
-    color: var(--nav-hover-link-color);
+    color: var(--white-color);
     font-family: var(--paragraph-font);
+    text-decoration: underline;
+}
 
+.container-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.card1 {
+    background-color: aqua;
+
+}
+
+.card2 {
+    background-color: rgb(25, 21, 82);
 }
 
 aside {
 
-    background-color: var(--white-color);
+    background-color: var(--purple-color);
     text-align: left;
-    width: 500px;
+    width: 600px;
 }
 
 aside p {
-    color: var(--black-color);
+    color: var(--white-color);
     font-family: var(--paragraph-font);
 }
 
