--- a/styles/base.css
+++ b/styles/base.css
@@ -13,11 +13,12 @@ ul, li {
 
 body {
     font-family: "Poppins", sans-serif;
-    height: 90vh;
+
 }
 
 main {
     max-width: 100%;
+
 }
 
 h1 {
@@ -25,7 +26,7 @@ h1 {
     align-content: center;
     font-size: 1.5rem;
     color: #000;
-    height: 40px;
+    height: auto;
 }
 
 h2 {
@@ -94,24 +95,27 @@ nav.navlinks-sidebar a:hover {
 
 header {
     background-color: #ddd;
+    height: auto;
+    max-width: 100%;
 
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(100px, 1fr));
+    gap: 10px;
+    align-items: center;
 
 }
 
 .grid-container {
     display: grid;
-    height: 80vh;
-    width: 85vw;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 0 auto;
-    gap: 10px;
-    padding: 20px 0;
 
+    grid-template-columns: repeat(autofill, minmax(100px, 1fr));
+    margin: 0 auto;
+    padding: 20px 0;
+    gap: 10px;
+    align-items: center;
 
 }
 
@@ -121,38 +125,66 @@ header {
     border: 1px solid #777;
     border-radius: 10px;
     box-shadow: 0px 0px 4px #888888;
-    grid-column: span 2;
+    grid-column: span 1;
+    min-width: 50%;
+    justify-content: space-between;
+
 
 
 }
 
+.card2 {
+    background-color: white;
+    border: 1px solid #777;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px #888888;
+    text-align: center;
+    grid-column: span 1;
+    min-width: 50%;
+    justify-content: space-between;
+
+
+
+}
 article {
-    display: flex;
+    display: grid;
     align-content: center;
     margin-bottom: 50px;
+    grid-template-columns: repeat(autofill, minmax(200px, 1fr)); */
+
+
 }
 
 article.about-me {
     /* background-color: #006eb6; */
-    margin: 0 50px;
-    padding: 10px 50px;
+    margin: 0 200px;
+    padding: auto 100px;
     border-bottom: 1px solid #ddd;
+    max-width: 100%;
+    height: auto;
+
 
 }
 
 article.about-my-hobby {
     /* background-color: #006eb6; */
-    margin: 0 50px;
-    padding: 10px 50px;
+    margin: 0 200px;
+    padding: auto 100px;
     border-bottom: 1px solid #ddd;
+    max-width: 100%;
+    height: auto;
+
 
 }
 
 article.about-the-philippines {
     /* background-color: #006eb6; */
-    margin: 0 50px;
-    padding: 10px 50px;
+    margin: 0 200px;
+    padding: auto 100px;
     border-bottom: 1px solid #ddd;
+    max-width: 100%;
+    height: auto;
+
 
 }
 
@@ -160,6 +192,11 @@ article.about-me img {
     width: 150px;
     padding-top: 5px;
     padding-right: 20px;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+
+
 
 
 }
@@ -168,6 +205,10 @@ article.about-my-hobby img {
     width: 150px;
     padding-top: 5px;
     padding-right: 20px;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+
 
 
 }
@@ -176,6 +217,10 @@ article.about-the-philippines img {
         width: 150px;
         padding-top: 5px;
         padding-right: 20px;
+        max-width: 100%;
+        height: auto;
+        margin: 0 auto;
+
 }
 
 .card1 > p {
@@ -187,22 +232,14 @@ article.about-the-philippines img {
 
 }
 
-.card2 {
-    background-color: white;
-    border: 1px solid #777;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px #888888;
-    grid-column: span 1;
-    text-align: center;
 
-
-}
 
 footer {
     background-color: #ddd;
     text-align: center;
     align-content: center;
-    height: 42px;
+    flex-wrap: nowrap;
+    /* height: 42px; */
 }
 
 .lastmodified {
