--- a/styles/base.css
+++ b/styles/base.css
@@ -127,8 +127,9 @@ header {
     border-radius: 10px;
     box-shadow: 0px 0px 4px #888888;
     grid-column: span 1;
-    min-width: 50%;
+    max-width: 70%;
     justify-content: space-between;
+    margin: 0 auto;
 
 
 
@@ -141,11 +142,15 @@ header {
     box-shadow: 0px 0px 4px #888888;
     text-align: center;
     grid-column: span 1;
-    min-width: 50%;
+    max-width: 70%;
     justify-content: space-between;
+    margin: 0 auto;
 
 
+}
 
+.card2>h2 {
+    font-size: 1rem;
 }
 article {
     display: grid;
