--- a/csspractice/styles/base.css
+++ b/csspractice/styles/base.css
@@ -3,7 +3,7 @@ body, html {
   padding: 0;
   height: 100%;
   display: flex;
-  
+  font-family: sans-serif;
   flex-direction: column;
 }
 
@@ -12,28 +12,28 @@ body, html {
   flex: 1;
   flex-direction: row;
   flex-wrap: nowrap;
-  
-  
+
+
 }
 
 .nav-links-wrapper {
-  display: flex;	
+  display: flex;
   justify-content: space-around;
   width: 95%;
-  
-  
-  
+
+
+
 }
 
 nav.navlinks1 li {
    text-align: center;
    padding: 0;
    margin: 0;
-   
+
 }
 
 nav.navlinks1 ul {
-    
+
 	justify-content: left;
 	padding: 0;
 }
@@ -42,12 +42,12 @@ nav.navlinks2 li {
    text-align: center;
    padding: 0;
    margin: 0;
-   
+
 }
 
 
 nav.navlinks2 ul {
-	
+
 	justify-content: center;
 	padding: 0;
 }
@@ -73,7 +73,7 @@ ul, li {
 a {
   text-decoration: none;
   color: white;
-  
+
 }
 
 li:hover {
@@ -109,37 +109,37 @@ main > p{
 .right-sidebar > ul{
   display: flex;
   flex-direction: column;
-  
+
   background-color: #ccc;
   padding: 20px;
-  
+
 }
 
 .right-sidebar > ul li {
-	
+
   margin: 10px auto;
-  
-	
+
+
 }
 
 .left-sidebar > ul li {
-	
+
   margin: 10px auto;
-  
-	
+
+
 }
 
 .left-sidebar > ul{
   display: flex;
   flex-direction: column;
-  
+
   background-color: #ccc;
   padding: 20px;
 }
 
 aside {
   flex: 0 0 auto;
-  
+
 }
 
 /* Responsive adjustments */
