--- a/csspractice/styles/base2.css
+++ b/csspractice/styles/base2.css
@@ -2,6 +2,7 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: sans-serif;
   display: grid; /* Use grid layout */
   grid-template-rows: 1fr auto 1fr; /* Define rows: header, content, footer */
 }
@@ -21,8 +22,8 @@ nav.navlinks1 ul {
   justify-content: flex-start; /* Adjust alignment to flex-start */
   padding: 10px;
   margin: 10px auto;
-  
-  
+
+
 }
 
 nav.navlinks2 ul {
@@ -57,7 +58,7 @@ a {
 li:hover {
   background-color: orange; /* Change background color on hover */
   transition: background-color 0.3s ease;
-  
+
 }
 
 h2 {
