--- a/week02/styles/temples.css
+++ b/week02/styles/temples.css
@@ -7,15 +7,30 @@
 }
 
 h1 {
+    font-size: 2rem;
+    text-align: left;
+    max-width: 100%;
+    color: #fff;
+    background-color: rgba(178, 34, 34, 0.9);
+    padding-left: 20px;
+
+}
+
+h2 {
+
     font-size: 1.5rem;
-    align-items: flex-start;
+    text-align: center;
+    margin: 10px auto;
+    max-width: 100%;
+    flex-wrap: nowrap;
+
 }
 
 header {
     /* display: block;
     position: relative; */
-    background-color: rgb(34, 68, 178);
-    color: yellow;
+    /* background-color: rgb(34, 68, 178); */
+    color: black;
     text-align: center;
     font-size: 1rem;
     margin: 0 auto;
@@ -33,22 +48,24 @@ header {
     top: 10px;
     right: 0;
 } */
+
+
 #menu {
-    font-size: 1rem;
+    font-size: 1.5rem;
     border: 0;
-    width: 25px;
-    height: 23px;
     position: absolute;
-    top: 5px;
-    right: 7px;
-    /* color: #000; */
-    /* background: none; */
+    top: 2px;
+    right: 15px;
+    color: firebrick;
+    background: none;
 
 }
 
 
-#menu {
-    content: "☰"; /*hamburger menu icon*/
+#menu::before {
+    content: "☰"; /*hamburger menu icon */
+
+
 
 }
 
@@ -60,45 +77,55 @@ header {
     display: block;
 }
 
-.open.navigation {
-    display: block;
-}
-
 
 
 .active::before {
  content: '📌';  /*wayfinding symbol for the user*/
 }
 
-ul {
-    display: flex;
-    flex-direction: row;
-
-}
-
 nav {
     display: flex;
-    justify-content: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    background-color: blueviolet;
     max-width: 100%;
+    flex: 1 1 auto;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+
+
 }
 
 
+.flex-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* background-color: blue; */
+}
+
 .navigation {
-    background-color: rgba(178, 34, 34, 0.9);
+    background-color: firebrick;
     color: #fff;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-content: space-between;
-    margin: 0 100px;
-    border-radius: 4px;
+    margin: 0 auto;
     max-width: 100%;
+    /* flex: 1 1 auto; */
 }
 
 .navigation a {
-
+    display: none;
     color: #fff;
     text-decoration: none;
     text-align: center;
+    font-size: 1.5rem;
+
 
 
 }
@@ -107,7 +134,8 @@ nav {
 
 .navigation li {
     list-style: none;
-    margin: 0 10px;
+    margin: 0 50px;
+    flex: 1 0 auto;
 
 
 }
@@ -152,17 +180,17 @@ main {
     display: grid;
     margin-top: 10px;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 230px);
+    grid-template-rows: repeat(3, 220px);
     grid-gap: 5px;
     align-items: center;
     justify-content: center;
-    max-width: 1500px;
+    max-width: 1000px;
 
 }
 
 
 main > img {
-    max-width: 80%;
+    max-width: 10%;
     height: auto;
 
 
@@ -180,60 +208,9 @@ footer {
 
 }
 
- /* @media all and (max-width:925px) {
+/* When screen size is 1150 in width collapse grid to show 2 x 2 */
 
-    main {
-
-            display: grid;
-            margin-top: 10px;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 230px);
-            grid-gap: 5px;
-            align-items: center;
-            justify-content: center;
-
-
-        }
-
-
-
- } */
-
- @media only screen and (max-width:629px) {
-
-     main {
-
-         display: grid;
-         margin-top: 10px;
-         grid-template-columns: repeat(1, 1fr);
-         grid-template-rows: repeat(1, 230px);
-         grid-gap: 5px;
-         align-items: center;
-         justify-content: center;
-
-
-     }
-
-    main>img {
-        max-width: 100%;
-        height: auto;
-
-
-    }
-
-    .navigation {
-        flex-direction: column;
-    }
-
-    ul {
-        display: flex;
-        flex-direction: column;
-
-    }
-
- }
-
-@media only screen and (min-width:607px) and (max-width: 1048px) {
+@media only screen and (max-width: 1290px) {
 
     main {
 
@@ -248,22 +225,81 @@ footer {
 
     }
 
-    main>img {
-        max-width: 100%;
-        height: auto;
+    #menu {
+        font-size: 1.5rem;
+        border: 0;
+        position: absolute;
+        top: 2px;
+        right: 15px;
+        color: firebrick;
+        background: none;
+
+    }
+
+
+    #menu::before {
+        content: "☰";
+        /*hamburger menu icon */
+
 
 
     }
 
-    .navigation {
-        flex-direction: row;
+    #menu.open::before {
+        content: "X";
+        /*click to go back*/
+
+
     }
 
-    ul {
+    .open a {
+        display: block;
+    }
+
+    .flex-wrapper {
         display: flex;
         flex-direction: row;
+        justify-content: left;
+        align-items: center;
+        /* background-color: blue; */
+    }
+
+    /* h1 {
+        font-size: 2rem;
+        display: block;
+        background-color: rgba(178, 34, 34, 0.9);
+        max-width: 100%;
+
+
+    } */
+
+    .navigation {
+        flex-direction: column;
+        /* display: none; */
+    }
+
+    nav ul {
+        display: block;
+    }
+
+
+
+
+    .active::before {
+        content: '';
+    }
+
+    .navigation li:hover::before {
+
+        content: '';
 
     }
+
+    #menu {
+        color: #fff;
+    }
+
+
 
     footer {
 
@@ -279,50 +315,65 @@ footer {
 }
 
 
- @media only screen and (max-width:607px) {
+/* Bring down grid to a single column when viewport width is 607px and below*/
+@media only screen and (max-width:607px) {
 
-     main {
+    main {
 
-         display: grid;
-         margin-top: 10px;
-         grid-template-columns: repeat(1, 2fr);
-         grid-template-rows: repeat(1, 230px);
-         grid-gap: 5px;
-         align-items: center;
-         justify-content: center;
-
-
-     }
-
-     main>img {
-         max-width: 100%;
-         height: auto;
+        display: grid;
+        margin-top: 10px;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 230px);
+        grid-gap: 5px;
+        align-items: center;
+        justify-content: center;
 
 
-     }
+    }
 
 
 
-     .navigation {
-         flex-direction: column;
-         display: none;
-     }
+    .navigation {
+        flex-direction: column;
+        /* display: none; */
+    }
 
-     ul {
-         display: flex;
-         flex-direction: column;
+    nav ul {
+        display: block;
 
-     }
+    }
 
-     footer {
+    #menu::before {
+        content: "☰";
+        /*hamburger menu icon */
 
-         background-color: rgb(0, 0, 0, 0.9);
-         color: #fff;
-         margin: 0 auto;
-         text-align: center;
-         font-size: 0.9em;
-         max-width: 100%;
 
-     }
 
- }
+    }
+
+    #menu.open::before {
+        content: "X";
+        /*click to go back*/
+
+    }
+
+    .open a {
+        display: block;
+    }
+
+    #menu {
+        color: #fff;
+    }
+
+    footer {
+
+        background-color: rgb(0, 0, 0, 0.9);
+        color: #fff;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 0.9em;
+        max-width: 100%;
+
+    }
+
+}
