--- a/week02/styles/temples.css
+++ b/week02/styles/temples.css
@@ -225,6 +225,8 @@ footer {
 
     }
 
+
+
     #menu {
         font-size: 1.5rem;
         border: 0;
@@ -285,7 +287,7 @@ footer {
 
 
 
-    .active::before {
+    /* .active::before {
         content: '';
     }
 
@@ -293,7 +295,7 @@ footer {
 
         content: '';
 
-    }
+    } */
 
     #menu {
         color: #fff;
@@ -341,6 +343,39 @@ footer {
     nav ul {
         display: block;
 
+    }
+
+    .navigation li {
+        list-style: none;
+        margin: 0 50px;
+        flex: 1 0 auto;
+
+
+    }
+
+    .navigation li:before {
+        content: '\2022';
+        color: rgba(178, 34, 34, 0.9);
+        display: inline-block;
+        width: 1.2em;
+        margin: 0;
+
+
+    }
+
+    .navigation li::marker {
+        color: rgba(178, 34, 34, 0.9);
+    }
+
+    .navigation li:hover::before {
+        /* background-color: rgb(204, 138, 57, 0.6); */
+        /* text-decoration: underline; */
+        content: '👇';
+        background-color: rgba(178, 34, 34, 0.9);
+        ;
+        transition: background-color 0.4s ease;
+        /* content: '\25BA'; */
+        /* background-color: aliceblue; */
     }
 
     #menu::before {
