--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,186 +1,245 @@
+@media screen and (min-width: 100px) and (max-width: 1000px) {
+    .data-title-philippines, .data-title-weather {
+        display: none;
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Poppins, sans-serif;
+    }
 
-}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Poppins, sans-serif;
+    }
 
-body {
-    background-color: rgba(0, 56, 168, 0.9);
-    max-width: 100%;
+    body {
 
-}
+        min-height: 100vh;
+        background-color: rgba(0, 56, 168, 0.9);
+        width: 100vw;
+        overflow-x: hidden;
+        /* Prevent horizontal scrolling */
+    }
 
-header {
-    margin-bottom: 5px;
-    max-width: 100%;
-}
+    header {
+        margin-bottom: 5px;
+        width: 100%;
+    }
 
-h1 {
-    font-size: 2rem;
-    text-align: center;
-    max-width: 100%;
-    color: #fff;
-    background-color: rgba(205, 17, 38, 0.9);
-    padding-left: 20px;
+    h1 {
+        font-size: 2rem;
+        text-align: center;
+        width: 100%;
+        color: #fff;
+        background-color: rgba(205, 17, 38, 0.9);
+        padding: 0 20px;
+    }
 
-}
-
-#title-header {
-    text-align: center;
-    margin-top: 32px;
-    color: aliceblue;
-
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
-    gap: 10px;
-    width: 100vw;
-    height: 100vh;
-}
-
-.grid-item {
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
-    width: 100%;
-    height: 100%;
-    object-fit:cover;
-
-}
-
-main {
-
-    justify-content: center;
-    align-items: center;
-}
-
-.hero {
-
-    max-width: 100%;
-}
+    #title-header-weather::after {
+        /* display: block; */
+        content: url("/images/weather_clouds_sun_sunny_icon.svg");
+        display: block;
+        width: 32px;
+        height: 32px;
+        margin-left: 10px;
 
 
 
-#card1 {
+    }
+    #title-header-weather, #title-header-data {
+        /* background-color: var(--transparent-black); */
+        /* justify-content: center; */
+        margin: 0 30px;
+        color: black;
+        font-size: 1.2rem;
+    }
 
-    background-color: aliceblue;
-    /* position: absolute; */
-    /* margin-top: 50px; */
-    /* margin-left: 50px; */
-    /* border-radius: 4px; */
-}
+    #title-header-data {
+        height: 50px;
+        text-align: left;
+        max-width: 100%;
+        margin: 0 30px;
+        color: black;
 
-.data-box-1>a {
-    text-align: right;
-    padding: 0 20px;
+    }
 
-}
+    .data-box-1, .data-box-2 {
 
-.more-content {
-    display: none;
-}
+        margin: 0 auto;
 
-#card2 {
-    background-color: aliceblue;
+    }
 
-    /* position: absolute; */
-    /* margin-top: 350px; */
-    /* margin-left: 1100px; */
-    /* border-radius: 4px; */
-}
+    .title-header {
+        color: var(--black-bg-color);
 
-
-.data-title {
-    background-color: rgba(252, 212, 37, 0.9);
-    position: absolute;
-    width: 200px;
-    top: -10px;
-    left: -10px;
-    text-align: left;
-    padding-left: 10px;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
-    /* z-index: 10; */
-
-}
-
-.data-box-1 {
-    /* display: grid; */
-    /* position: relative; */
-    /* grid-template-columns: 1fr; */
-    /* grid-template-rows: auto; */
-    font-size: 0.8rem;
-    gap: 2px;
-    margin: 40px auto;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-
-}
-
-.data-box-2 {
-    /* display: grid; */
-    /* position: relative; */
-    /* grid-template-columns: 1fr; */
-    /* grid-template-rows: auto; */
-    font-size: 0.8rem;
-    margin: 40px auto;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-
-
-}
-
-.row {
-    display: grid;
-    grid-template-columns: repeat(2, 150px);
-    padding: 0 20px;
-
-
-}
-
-
-.col1 {
-
-    padding: 0.2rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    text-align: right;
-
-
-}
-
-.col2 {
-
-    padding: 0.2rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: normal;
+    }
 
 
 
+    footer {
+        display: none;
 
+    }
 }
 
 
 
-picture {
-    max-width: 100%;
-    margin: 0 auto;
-    height: auto;
+@media screen and (min-width: 800px) {
 
-    /* display: block; */
+    .data-box-1,
+    .data-title-philippines, .data-title-weather {
+        display: block;
+
+    }
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Poppins, sans-serif;
+
+    }
+
+    body {
+        background-color: rgba(0, 56, 168, 0.9);
+        width: 100vw;
+        overflow-x: hidden; /* Prevent horizantal scrolling */
+    }
+
+    header {
+        margin-bottom: 5px;
+        max-width: 100%;
+    }
+
+    h1 {
+        font-size: 2rem;
+        text-align: center;
+        max-width: 100%;
+        color: #fff;
+        background-color: rgba(205, 17, 38, 0.9);
+        padding-left: 20px;
+
+    }
+
+    .hero {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        margin-top: 40px;
+    }
 
 
-}
+    #card1 {
+        background-color: aliceblue;
+        position: absolute;
+        margin-top: 50px;
+        margin-left: 50px;
+        /* border-radius: 4px; */
+    }
 
-footer {
+    .data-box-1>a {
+        text-align: right;
+        padding: 0 2rlh;
+    }
 
-    background-color: rgb(0, 0, 0, 0.9);
-    color: #fff;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 0.9em;
-    max-width: 100%;
+    .more-content {
+        display: none;
+    }
+
+    #card2 {
+        background-color: aliceblue;
+        position: absolute;
+        margin-top: 350px;
+        margin-left: 1100px;
+        /* border-radius: 4px; */
+    }
+
+    .data-title {
+        background-color: rgba(252, 212, 37, 0.9);
+        position: absolute;
+        width: 200px;
+        top: -10px;
+        left: -10px;
+        text-align: left;
+        padding-left: 10px;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+        z-index: 10;
+
+    }
+
+    .data-box-1 {
+        display: grid;
+        position: relative;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        font-size: 0.8rem;
+        gap: 2px;
+        margin: 40px auto;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+
+    }
+
+    .data-box-2 {
+        display: grid;
+        position: relative;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        font-size: 0.8rem;
+        margin: 40px auto;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+
+
+    }
+
+    .row {
+        display: grid;
+        grid-template-columns: repeat(2, 150px);
+        padding: 0 20px;
+
+
+    }
+
+
+    .col1 {
+
+        padding: 0.2rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        text-align: right;
+
+
+    }
+
+    .col2 {
+
+        padding: 0.2rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: normal;
+
+
+
+
+    }
+
+    main {
+
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+
+    footer {
+
+
+        background-color: rgb(0, 0, 0, 0.9);
+        color: #fff;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 0.9em;
+        max-width: 100%;
+        height: fit-content;
+
+    }
 
 }
