--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -121,9 +121,9 @@ body {
     background-color: #28464bff;
     color: whitesmoke;
     border-radius: 5px;
-    margin: 10px 10px;
+    margin: 10px 15px;
     height: auto;
-    width: auto;
+    max-width: 88px;
     flex: 1 0 auto;
 
 }
