Fixed hamburger icon

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 50vw;
+    max-width: 60vw;
     margin: 0 auto;
     /* background: url('/wdd131/project/images/site-planning.webp') no-repeat center top; */
     /* background-color: var(--dark-slate-gray); */
@@ -115,7 +115,7 @@ body {
 
 }
 
-#signup-btn {
+.signup-btn {
     font-family: Roboto, Arial, sans-serif;
     padding: 10px 20px;
     background-color: #28464bff;
@@ -158,7 +158,13 @@ body {
 
 .open a {
     display: block;
+    color: #931621ff;
+
 }
+
+/* .open ul {
+    display: block;
+} */
 
 
 /* ================== HEADER ====================== */
@@ -242,16 +248,19 @@ span#color2 {
     border-radius: 5px;
 }
 
+
+
 .layout-section  {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.layout-section img {
+.layout-section img,
+.top-section img {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: auto;
+    object-fit: cover;
 }
 
 .layout-section h2 {
@@ -336,39 +345,12 @@ footer {
     color: #464444;
 }
 
-@media screen and (min-width: 1115px) {
-
-    #menu::before {
-        content: "☰";
-        /*hamburger menu icon */
-
-    }
-
-    #menu.open::before {
-        content: "X";
-        /*click to go back*/
-
-    }
-
-    .open a {
-        display: none;
-    }
 
 
-
-    #menu {
-        color: whitesmoke;
-        /* margin-right: auto; */
-        align-self: flex-start;
-    }
-
-
-
-}
 
 @media screen and (max-width: 1290px) {
-    .navigation ul,
-    #signup-btn {
+
+    .signup-btn {
         display: block;
     }
 
@@ -380,53 +362,48 @@ footer {
     .navigation {
         flex-direction: column;
         margin: 0 auto;
+        color: whitesmoke;
     }
    .navigation ul {
        flex-direction: column;
        margin-left: 30px;
 
+
    }
 
 
-    #signup-btn {
+    .signup-btn {
         max-width: 100px;
         align-self: center;
     }
 
 }
 
-@media screen and (min-width: 500px) {
-    /* Show navigation on smaller screen sizes */
 
-        .navigation ul,
-        #signup-btn {
-            display: flex;
-        }
-
-
-        #menu {
-            display: none;
-        }
-
-}
 
 @media screen and (max-width: 500px) {
-    /* Show navigation on bigger screen sizes */
+    /* Show navigation on smaller screen sizes */
 
-    .navigation ul,
-    #signup-btn {
-        display: none;
+    body {
+        max-width: 100vw;
     }
 
 
-    #menu {
+    .signup-btn {
         display: block;
     }
 
+
+    /* #menu {
+        display: block;
+    } */
+
     /* .open .navigation ul,
-    .open #signup-btn {
+    .open .signup-btn {
         display: flex;
     } */
+
+
 
 
 }
