--- a/project/styles/base-large.css
+++ b/project/styles/base-large.css
@@ -1,10 +1,10 @@
-@media (min-width: 1290px) {
-    /* Hide hamburger button */
+/* Hide hamburger button for larger screens*/
+@media (min-width: 600px) {
+
     #menu {
         display: none;
     }
 
-
-
-
 }
+
+
