--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 60vw;
+    max-width: 80vw;
     margin: 0 auto;
     /* background: url('/wdd131/project/images/site-planning.webp') no-repeat center top; */
     /* background-color: var(--dark-slate-gray); */
@@ -71,7 +71,7 @@ body {
     align-items: center;
     /* background-color: var(--carmine); */
     background-color: #931621ff;
-    flex: 1 1 60%;
+    flex: 1 1 35%;
 
 }
 
@@ -128,7 +128,7 @@ body {
     border-radius: 5px;
     margin: 35px 45px;
     height: auto;
-    max-width: 88px;
+    max-width: 90px;
     flex: 1 0 10%;
 
 }
@@ -335,6 +335,11 @@ span#color2 {
     border-radius: 5px;
 }
 
+.bottom-section h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .bottom-section ul {
     margin-bottom: 10px;
     text-align: center;
@@ -413,6 +418,7 @@ footer {
 
 
     background-color: whitesmoke;
+    padding-top: 50px;
     padding: 20px;
     text-align: center;
     color: whitesmoke;
@@ -452,16 +458,21 @@ footer {
 
 @media screen and (min-width: 1390px) {
 
+    body {
+        background-color: #f4f4f4;
+    }
+
 
     .portfolio-container {
         display: grid;
         grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(3, auto);
         width: 100%;
         height: auto;
         max-width: 1200px;
         margin: 0 auto;
         gap: 30px;
+        background-color: white;
 
 
 
@@ -469,30 +480,37 @@ footer {
     }
 
 
-    portfolio-items {
-        background-color: white;
+    .portfolio-items {
+        /* background-color: pink; */
+        display: flex;
+        flex-direction: column;
         border: 1px solid #eee;
         border-radius: 5px;
         overflow: hidden;
         box-shadow: 0 2px 4px rgba(0,0,0,0.5);
-        transition: transform 0.3s ease box-shadow 0.3 ease;
-        text-align: center;
-
+        transition: transform 0.4s ease box-shadow 0.3 ease;
+        z-index: 1;
 
     }
 
 
-    portfolio-items:hover {
-        transform: scale(1.5);
+
+
+    .portfolio-items:hover {
+        transform: scale(1.1);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 10;
+        font-size: 1rem;
+
 
     }
 
 
-    portfolio-items img {
+    .portfolio-items img {
         width: 100%;
         height: auto;
         display: block;
+        align-content: center;
     }
 
     .project-title {
@@ -504,9 +522,35 @@ footer {
         font-size: 0.9rem;
     }
 
+    .titlediv {
+        font-size: 1rem;
+    }
+    .picturediv {
+        justify-content: center;
+        align-content: center;
+    }
+
+
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 500px) {
+    /* Show navigation on smaller screen sizes */
+
+    body {
+        max-width: 100vw;
+    }
+
+
+    .signup-btn {
+        display: block;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+
+
+    /* Portfolio css */
     .portfolio-container {
         display: flex;
         flex-direction: column;
@@ -559,29 +603,3 @@ footer {
 
 
 
-@media screen and (max-width: 500px) {
-    /* Show navigation on smaller screen sizes */
-
-    body {
-        max-width: 100vw;
-    }
-
-
-    .signup-btn {
-        display: block;
-    }
-
-
-    /* #menu {
-        display: block;
-    } */
-
-    /* .open .navigation ul,
-    .open .signup-btn {
-        display: flex;
-    } */
-
-
-
-
-}
