--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -435,7 +435,10 @@ footer {
 
 .footer-text {
     color: #464444;
+    font-size: medium;
 }
+
+
 
 
 /* ================== HOME PAGE ====================== */
@@ -456,7 +459,7 @@ footer {
 
 /* ================== PORTFOLIOS ====================== */
 
-@media screen and (min-width: 1390px) {
+@media (min-width:501px) and (max-width: 1900px) {
 
     body {
         background-color: #f4f4f4;
@@ -525,37 +528,60 @@ footer {
     .titlediv {
         font-size: 1rem;
     }
-    .picturediv {
-        justify-content: center;
-        align-content: center;
-    }
+
 
 
 }
 
-@media screen and (max-width: 500px) {
-    /* Show navigation on smaller screen sizes */
+
+@media (min-width: 375px) and (max-width: 500px) {
 
     body {
-        max-width: 100vw;
-    }
+            max-width: 100vw;
+        }
 
 
     .signup-btn {
         display: block;
     }
 
-}
+   .social-links,
+   .footer-links img {
+       width: 30px;
+       height: 30px;
+   }
 
-@media screen and (max-width: 500px) {
-
-
-    /* Portfolio css */
-    .portfolio-container {
+    .portfolio-items {
+        /* background-color: pink; */
         display: flex;
         flex-direction: column;
-        flex-wrap: nowrap;
+        border: 1px solid #eee;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        transition: transform 0.4s ease box-shadow 0.3 ease;
+        z-index: 1;
 
+    }
+
+
+
+
+    .portfolio-items:hover {
+        transform: scale(1.1);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 10;
+        font-size: 1rem;
+
+
+    }
+
+
+    .portfolio-items img {
+        width: 100%;
+        height: auto;
+        display: block;
+        align-content: center;
     }
 
     .project-title {
@@ -564,8 +590,11 @@ footer {
 
     .project-desc {
         text-align: center;
-        font-size: 0.8rem;
-        font-weight: normal;
+        font-size: 0.9rem;
+    }
+
+    .titlediv {
+        font-size: 1rem;
     }
 
 }
