--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -179,10 +179,7 @@ h1 {
     color: whitesmoke;
 }
 
-h2 {
-    background-color: #28464bff;
-    color: whitesmoke;
-}
+
 
 h3 {
     border-bottom: 1px solid #ddd;
@@ -241,9 +238,12 @@ span#color2 {
 .hero,
 .bottom-section {
     /* font-family: var(--secondary-font); */
-
+    display: flex;
+    flex-direction: column;
     font-family: Poppins, sans-serif;
     font-size: 0.8rem;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -338,6 +338,7 @@ span#color2 {
 .bottom-section h2 {
     text-align: center;
     margin-bottom: 50px;
+    color: black;
 }
 
 .bottom-section ul {
@@ -457,8 +458,9 @@ footer {
 
 
 
-/* ================== PORTFOLIOS ====================== */
+/* ================== PORTFOLIOS MEDIA QUERIES ====================== */
 
+/* Media query for LARGE window resizing range */
 @media (min-width:501px) and (max-width: 1900px) {
 
     body {
@@ -477,11 +479,7 @@ footer {
         gap: 30px;
         background-color: white;
 
-
-
-
     }
-
 
     .portfolio-items {
         /* background-color: pink; */
@@ -496,18 +494,13 @@ footer {
 
     }
 
-
-
-
     .portfolio-items:hover {
         transform: scale(1.1);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         z-index: 10;
         font-size: 1rem;
 
-
     }
-
 
     .portfolio-items img {
         width: 100%;
@@ -529,23 +522,58 @@ footer {
         font-size: 1rem;
     }
 
+    #portfolio-btn {
+        font-family: Roboto, Arial, sans-serif;
+        padding: 10px 20px;
+        background-color: rebeccapurple;
+        color: whitesmoke;
+        border-radius: 5px;
+        margin: 0 10px;
+        height: auto;
+        max-width: 90px;
+        flex: 1 0 10%;
+    }
 
+    .dropdown-container {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-self: center;
+        width: 100%;
+        max-width: 400px;
+        margin-bottom: 40px;
+    }
+
+    .dropdown-container select {
+        width: 100%;
+        height: 44px;
+        font-size: 1.2rem;
+        font-family: Roboto, Arial, sans-serif;
+        border-radius: 5px;
+        margin: 0 auto;
+        padding: auto 10px;
+    }
 
 }
 
 
-@media (min-width: 375px) and (max-width: 500px) {
+/* Media query for SMALL window resizing range */
+@media (min-width: 311px) and (max-width: 500px) {
 
     body {
-            max-width: 100vw;
-        }
+        max-width: 100vw;
+    }
 
 
     .signup-btn {
         display: block;
     }
 
-   .social-links,
+   .social-links img {
+       width: 30px;
+       height: 30px;
+   }
+
    .footer-links img {
        width: 30px;
        height: 30px;
@@ -564,9 +592,6 @@ footer {
 
     }
 
-
-
-
     .portfolio-items:hover {
         transform: scale(1.1);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -576,9 +601,8 @@ footer {
 
     }
 
-
     .portfolio-items img {
-        width: 100%;
+        width: 100vw;
         height: auto;
         display: block;
         align-content: center;
@@ -597,8 +621,40 @@ footer {
         font-size: 1rem;
     }
 
+    .picturediv {
+        width: 100%;
+        height: 0;
+        padding-bottom: 75%;
+        position: relative;
+        overflow: hidden;
+
+    }
+
+    .picturediv img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+    }
+
+    #portfolio-btn {
+        font-family: Roboto, Arial, sans-serif;
+        padding: 10px 20px;
+        background-color: rebeccapurple;
+        color: whitesmoke;
+        border-radius: 5px;
+        margin: 35px 45px;
+        height: auto;
+        max-width: 90px;
+        flex: 1 0 10%;
+    }
+
 }
 
+/* Media query for OTHER window resizing */
 @media screen and (max-width: 1290px) {
 
     .signup-btn {
