--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -539,8 +539,9 @@ footer {
         justify-content: center;
         align-content: center;
         align-self: center;
+        /* margin: 0 auto; */
         width: 100%;
-        max-width: 400px;
+        max-width: 300px;
         margin-bottom: 40px;
     }
 
