--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -571,14 +571,19 @@ footer {
     }
 
    .social-links img {
-       width: 30px;
-       height: 30px;
+       width: 25px;
+       height: 25px;
    }
 
    .footer-links img {
        width: 30px;
        height: 30px;
    }
+
+   .footer-text {
+    font-size: 0.7rem;
+   }
+
 
     .portfolio-items {
         /* background-color: pink; */
