--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -584,6 +584,27 @@ footer {
     font-size: 0.7rem;
    }
 
+   .dropdown-container {
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-content: center;
+       align-self: center;
+       margin: 0 auto;
+       width: 100%;
+       max-width: 200px;
+       margin-bottom: 20px;
+   }
+
+   .dropdown-container select {
+       /* width: 100vw; */
+       height: 44px;
+       font-size: 1rem;
+       font-family: Roboto, Arial, sans-serif;
+       border-radius: 5px;
+       margin: 0;
+       padding: 0;
+   }
 
     .portfolio-items {
         /* background-color: pink; */
@@ -612,6 +633,7 @@ footer {
         height: auto;
         display: block;
         align-content: center;
+        margin: 10px 100px;
     }
 
     .project-title {
